@@ -29,7 +29,7 @@ class EncounterLogicJpaIT {
 
         long currentTime = System.currentTimeMillis();
 
-        var patient = patientLogic.findByGivenName("Monty").get(0);
+        var patient = patientLogic.findByGivenName("Monty").getFirst();
         var encounters = encounterLogic.findByPatientIdAndDisplay(patient.id(), "eat");
 
         System.out.println("search took: "  + (System.currentTimeMillis() -currentTime));
