@@ -28,14 +28,14 @@ class PractitionerControllerIT {
         assertThat(practitioner.familyName()).isEqualTo("Monroe");
 
         assertThat(practitioner.address()).isNotNull().isNotEmpty();
-        assertThat(practitioner.address().get(0).city()).isEqualTo("Springfield");
-        assertThat(practitioner.address().get(0).street()).isEqualTo("Monroe Street 0");
+        assertThat(practitioner.address().getFirst().city()).isEqualTo("Springfield");
+        assertThat(practitioner.address().getFirst().street()).isEqualTo("Monroe Street 0");
 
         assertThat(practitioner.contactPoint()).isNotNull().isNotEmpty();
         assertThat(practitioner.contactPoint()).isNotNull().isNotEmpty();
-        assertThat(practitioner.contactPoint().get(0).use()).isEqualTo(AddressUse.HOME.getValue());
-        assertThat(practitioner.contactPoint().get(0).system()).isEqualTo(ContactPointSystem.PHONE.getValue());
-        assertThat(practitioner.contactPoint().get(0).value()).isEqualTo("555-333");
+        assertThat(practitioner.contactPoint().getFirst().use()).isEqualTo(AddressUse.HOME.getValue());
+        assertThat(practitioner.contactPoint().getFirst().system()).isEqualTo(ContactPointSystem.PHONE.getValue());
+        assertThat(practitioner.contactPoint().getFirst().value()).isEqualTo("555-333");
 
 
         delete(id);
